<resources>
    <string name="app_name">towa</string>

    <string name="bottom_nav_search">Search</string>
    <string name="bottom_nav_settings">Settings</string>
    <string name="bottom_nav_about">About</string>

    <string name="about_page_sources_title">Sources</string>
    <string name="about_page_about_title">About</string>
    <string name="about_page_about">とは (Towa) is an offline bilingual (JP -> ENG) and monolingual (JP -> JP) japanese pop-up dictionary with Anki integration.</string>
    <string name="about_page_sources_peamble">Towa uses free, publicly available data sources to comprise its dictionary.</string>
    <string name="about_page_word_subheading">Words, Definitions, &amp; Examples</string>
    <string name="about_page_word">Sourced from <a href="https://www.edrdg.org/wiki/index.php/JMdict-EDICT_Dictionary_Project">JMdict</a>(<a href="http://ftp.edrdg.org/pub/Nihongo/JMdict_e_examp.gz">JMdict_e_examp.gz</a>, which include examples from the <a href="https://www.edrdg.org/wiki/index.php/Tanaka_Corpus">Tanaka Corpus</a>).\n\nThis is property of the <a href="http://www.edrdg.org/">Electronic Dictionary Research and Development Group</a>,and used in accordance with their <a href="https://www.edrdg.org/edrdg/licence.html">Creative Commons Attribution-ShareAlike Licence (V4.0)</a>.</string>
    <string name="about_furigana_subheading">Furigana</string>
    <string name="about_furigana">Sourced from <a href="https://github.com/Doublevil/JmdictFurigana">JmdictFurigana</a>, using the same license as JMdict above
        (<a href="https://www.edrdg.org/edrdg/licence.html">Creative Commons Attribution-ShareAlike Licence (V4.0)</a>).
    </string>
    <string name="about_audio_subheading">Audio Examples</string>
    <string name="about_audio">Half-sourced from <a href="https://www.tofugu.com/">Tofugu\'s</a> vocab &amp; learning site
        <a href="https://www.wanikani.com/">WaniKani</a>, licensed under the
        <a href="https://www.edrdg.org/edrdg/licence.html">Creative Commons Attribution-ShareAlike Licence (V4.0)</a>.

        \n\nHalf-sourced from the <a href="https://kanjialive.com/">Kanji Alive project</a>, licensed under the
        <a href="https://creativecommons.org/licenses/by/4.0/">Create Commons CC BY 4.0</a>.
    </string>
    <string name="about_jlpt_subheading">JLPT Data</string>
    <string name="about_jlpt">Sourced from <a href="http://www.tanos.co.uk/jlpt/">Jonathan Waller\'s resources</a>,
        and licensed under <a href="https://creativecommons.org/licenses/by/4.0/">Create Commons CC BY 4.0</a>.
    </string>

    <string name="search_hint">Find words, phrases…</string>

    <string name="settings_personalization_title">Personalization</string>
    <string name="settings_language_title">Language</string>
    <string name="settings_dictionary_title">Dictionary</string>
    <string name="settings_anki_title">Anki</string>

    <string name="settings_theme_hint">Theme</string>
    <string name="settings_language_hint">Preferred Translation Language</string>
    <string name="settings_localization_hint">Localization</string>
    <string name="settings_dict_length_hint">Max Entries Shown</string>

    <string name="theme_name_matcha">Matcha</string>
    <string name="theme_name_hinomaru">Hinomaru</string>
    <string name="theme_name_tsuki">Tsuki</string>

    <string name="language_name_en">English</string>
    <string name="language_name_jp">Japanese (WIP)</string>
    <string name="localization_name_en">English</string>
    <string name="localization_name_jp">日本語</string>

    <string name="anki_deck_name_hint">Anki Deck Name</string>
    <string name="audio_source_hint">Preferred Audio Source</string>
    <string name="audio_source_tofugu">Tofugu</string>
    <string name="audio_source_kanji_alive">Kanji Alive</string>
    <string name="searching_text">Searching…</string>
    <string name="entry_not_found_text">No entries found for \"{}\"</string>
    <string name="not_found_msg_1" >Can\'t find it～ sorry! (´・ω・)</string>
    <string name="not_found_msg_2" >Huh? I couldn\'t find it… (°ロ°;)</string>
    <string name="not_found_msg_3" >Hmmm, looks like its nowhere to be found… (´・へ・)</string>
    <string name="not_found_msg_4" >I looked all over, but came up empty-handed! (´；ω；)</string>
    <string name="not_found_msg_5" >Sorry… I couldn\'t find it ( ；∀；)</string>
    <string name="not_found_msg_6" >Huh? Where\'d it go?! (・∀・)</string>
    <string name="not_found_msg_7" >Hmmm, can\'t seem to find it ( ๑˙ϖ˙๑ )</string>
    <string name="not_found_msg_8" >Aw man - it\'s went POOF! (∩｀-´)⊃━☆ﾟ.*･｡</string>
    <string name="not_found_msg_9" >Oops, did it get lost? (￣▽￣)ニヤリ</string>
    <string name="not_found_msg_10">Fufufu… maybe it\'s hiding? (๑˃̵ᴗ˂̵)</string>

    <string name="context_menu_entry">Entry: {}</string>
    <string name="context_menu_add_single">Add only definition ({}) to Anki</string>
    <string name="context_menu_add_all">Add all definitions to Anki</string>
    <string name="context_menu_adding">Adding Anki Card…</string>
    <string name="context_menu_added">Anki card Added!</string>
    <string name="context_menu_not_added">Could not add Anki card.</string>
    <string name="context_menu_cancel">Cancel</string>

</resources>